# gai

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  gai-part2.patch  hickory-fix-v2.patch  hickory-fix-v3.patch  install.sh  readme-fix-0.2.1.patch  release-sh-hardening.patch
.github/workflows/: ci.yml  publish.yml  release.yml
gai/: Cargo.toml
gai-core/: Cargo.toml
gai-core/src/: lib.rs  platform.rs  sim.rs  types.rs
gai-core/src/config/: gai_conf.rs  hosts.rs  mod.rs  nsswitch.rs  resolv_conf.rs
gai-core/tests/: scenarios.rs
gai-probe/: Cargo.toml
gai-probe/src/: lib.rs  mdns.rs  reality.rs  resolved.rs  resolver.rs  runtime.rs
gai/src/: doctor.rs  explain.rs  main.rs
gai/tests/: cli.rs
scripts/: check_tag_version.sh  check_tag_version_test.sh  release.sh
