[package]
name = "gai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Pure parsing + simulation of Linux name-resolution config (nsswitch.conf, resolv.conf, gai.conf, hosts) — no I/O. Core of the gai CLI."
keywords = ["dns", "nsswitch", "resolv-conf", "getaddrinfo", "networking"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
