[package]
name = "gai-probe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Real I/O backing gai-core's simulation: DNS queries, /etc/hosts, systemd-resolved D-Bus, one-shot mDNS probing. No process interception."
keywords = ["dns", "systemd-resolved", "mdns", "getaddrinfo", "networking"]
categories = ["network-programming"]

[dependencies]
gai-core = { path = "../gai-core", version = "0.2.0" }
thiserror.workspace = true
anyhow.workspace = true
# hickory-resolver: does raw DNS queries against a *given* server, bypassing
# NSS entirely. This is how we get an independent "reality" answer instead
# of trusting whatever the simulated chain produced.
# Pinned >=0.26.1: 0.24.x/0.25.x pull hickory-proto versions affected by
# RUSTSEC-2026-0119 (O(n^2) CPU exhaustion in message-encoding name
# compression). 0.26 also dropped the blocking Resolver API in favor of
# an async-only one — see resolver.rs::query for the bridge.
hickory-resolver = "0.26.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
# zbus: talks to org.freedesktop.resolve1 over the system D-Bus to get the
# per-link nameservers that actually back the 127.0.0.53 stub in
# resolv.conf. Blocking API is fine here — gai is a short-lived CLI, not
# a daemon.
zbus = "4"
