[package]
name = "gai-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "gai — getaddrinfo inspector. Explains how a name turns into an IP: nsswitch, resolv.conf, systemd-resolved, mDNS, and where it disagrees with a direct DNS query. `cargo install gai-inspector` installs the `gai` binary."
keywords = ["dns", "cli", "getaddrinfo", "nsswitch", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "gai"
path = "src/main.rs"

[dependencies]
gai-core = { path = "../gai-core", version = "0.2.0" }
gai-probe = { path = "../gai-probe", version = "0.2.0" }
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
